[gd_scene load_steps=13 format=3 uid="uid://dc37lcidf852s"]

[ext_resource type="Script" uid="uid://cix7dgur13ume" path="res://Menustuffs/Menu.gd" id="1_2rd20"]
[ext_resource type="Texture2D" uid="uid://cl665wgpfqbnb" path="res://Menustuffs/Commons/MenuBG.png" id="1_r5uri"]
[ext_resource type="PackedScene" uid="uid://cmfb6a66cild4" path="res://Menustuffs/MainMenu/MainMenu.tscn" id="2_ia1xe"]
[ext_resource type="Shader" uid="uid://cctpja4krhfbv" path="res://Shaders/blur.gdshader" id="3_fec8x"]
[ext_resource type="Texture2D" uid="uid://chgixm61v6lbr" path="res://Shaders/white.png" id="4_m101x"]
[ext_resource type="AudioStream" uid="uid://wybjlolx8mip" path="res://Musicstuffs/menu/menuLayer1.ogg" id="4_rrh7q"]
[ext_resource type="AudioStream" uid="uid://g2q1nrtdpu7f" path="res://Musicstuffs/menu/menuLayer2.ogg" id="5_fec8x"]
[ext_resource type="AudioStream" uid="uid://b2exfij2ykgn6" path="res://Musicstuffs/menu/menuLayer3.ogg" id="6_m101x"]
[ext_resource type="AudioStream" uid="uid://cif1ajm7jfcqh" path="res://Gamestuffs/Sounds/Commons/back.ogg" id="9_2f15j"]
[ext_resource type="AudioStream" uid="uid://qv46ji4ycvg3" path="res://Gamestuffs/Sounds/Commons/go.ogg" id="10_3g3s7"]
[ext_resource type="AudioStream" uid="uid://cs0gesu2ispb7" path="res://Gamestuffs/Sounds/Commons/tick.ogg" id="11_lo8pj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i30ho"]
shader = ExtResource("3_fec8x")
shader_parameter/amount = 0.0

[node name="Menu" type="Node2D"]
script = ExtResource("1_2rd20")

[node name="MenuBg" type="Sprite2D" parent="."]
position = Vector2(352, 224)
texture = ExtResource("1_r5uri")

[node name="BlurFx" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_i30ho")
offset_left = -410.0
offset_top = -146.0
offset_right = 1132.0
offset_bottom = 630.0
texture = ExtResource("4_m101x")

[node name="MainMenu" parent="." instance=ExtResource("2_ia1xe")]
z_index = 1

[node name="BGMLayer1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_rrh7q")
parameters/looping = true

[node name="BGMLayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_fec8x")
parameters/looping = true

[node name="BGMLayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_m101x")
parameters/looping = true

[node name="SFX" type="Node" parent="."]

[node name="Back" type="AudioStreamPlayer2D" parent="SFX"]
position = Vector2(257, 284)
stream = ExtResource("9_2f15j")

[node name="Go" type="AudioStreamPlayer2D" parent="SFX"]
position = Vector2(257, 284)
stream = ExtResource("10_3g3s7")

[node name="Tick" type="AudioStreamPlayer2D" parent="SFX"]
position = Vector2(257, 284)
stream = ExtResource("11_lo8pj")
